src/tokenizer/snapshots/reconcile_text__tokenizer__markdown_tokenizer__tests__ordered_task_list.snap
---
source: src/tokenizer/markdown_tokenizer.rs
expression: "markdown_tokenizer(\"1. [ ] first task\\n2. [x] second task\")"
---
[
    Token {
        normalized: "1. [ ] first",
        original: "1. [ ] first",
        is_left_joinable: false,
        is_right_joinable: true,
    },
    Token {
        normalized: " task",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "task",
        original: "task",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "\n",
        original: "\n",
        is_left_joinable: false,
        is_right_joinable: false,
    },
    Token {
        normalized: "2. [x] second",
        original: "2. [x] second",
        is_left_joinable: false,
        is_right_joinable: true,
    },
    Token {
        normalized: " task",
        original: " ",
        is_left_joinable: true,
        is_right_joinable: true,
    },
    Token {
        normalized: "task",
        original: "task",
        is_left_joinable: true,
        is_right_joinable: true,
    },
]
